--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,19 @@
 {
     "python.formatting.provider": "yapf",
     "cSpell.words": [
+        "cout",
+        "iostream",
         "urfave"
     ],
     "license.author": "baris-inandi",
     "licenser.projectName": "brainfuck",
     "licenser.author": "baris-inandi",
-    "licenser.license": "GPLv2"
+    "licenser.license": "GPLv2",
+    "files.associations": {
+        "LICENSE": "plaintext",
+        "*.i3": "i3",
+        ".SRCINFO": "plaintext",
+        "cstdint": "cpp",
+        "ostream": "cpp"
+    }
 }
