more faster fast fast

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "cout",
         "iostream",
+        "Ofast",
         "urfave"
     ],
     "license.author": "baris-inandi",
