--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ Cargo.lock
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 ignore/
+debug-*/
