--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "python.formatting.provider": "yapf",
     "cSpell.words": [
         "bfcontext",
         "bfexec",
@@ -10,15 +9,19 @@
         "ucli",
         "urfave"
     ],
-    "license.author": "baris-inandi",
     "licenser.projectName": "brainfuck",
     "licenser.author": "baris-inandi",
-    "licenser.license": "GPLv2",
+    "licenser.license": "GPLv3",
     "files.associations": {
         "LICENSE": "plaintext",
         "*.i3": "i3",
         ".SRCINFO": "plaintext",
         "cstdint": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "stdio.h": "c",
+        "math.h": "c",
+        "floatn.h": "c",
+        "math-vector.h": "c",
+        "mathcalls-helper-functions.h": "c"
     }
 }
