--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,10 @@
         "bfcontext",
         "bfexec",
         "bffmt",
+        "canonicalizer",
         "cout",
         "iostream",
+        "irliteral",
         "Ofast",
         "putc",
         "ucli",
