--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,11 @@
         "bfexec",
         "bffmt",
         "canonicalizer",
+        "caser",
         "cout",
         "iostream",
         "irliteral",
+        "javac",
         "Ofast",
         "putc",
         "ucli",
