--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,go,rust
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,go,rust
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,rust,linux,go,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,rust,linux,go,java
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
@@ -28,6 +28,32 @@ go.work
 ### Go Patch ###
 /vendor/
 /Godeps/
+
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
 
 ### Linux ###
 *~
@@ -85,7 +111,7 @@ Cargo.lock
 # Ignore code-workspaces
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,go,rust
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,rust,linux,go,java
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
