experimental js support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "iostream",
         "irliteral",
         "javac",
+        "JSIR",
+        "NODEIR",
         "Ofast",
         "putc",
         "ucli",
