experimental js support +

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "bfcontext",
         "bfexec",
         "bffmt",
+        "bfhtml",
         "canonicalizer",
         "caser",
         "cout",
