--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "irliteral",
         "javac",
         "JSIR",
+        "Minifier",
         "NODEIR",
         "Ofast",
         "putc",
