--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "baris",
         "bfcode",
         "bfcontext",
         "bfexec",
@@ -8,6 +9,7 @@
         "canonicalizer",
         "caser",
         "cout",
+        "inandi",
         "iostream",
         "irliteral",
         "javac",
