--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,6 @@
         "floatn.h": "c",
         "math-vector.h": "c",
         "mathcalls-helper-functions.h": "c"
-    }
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
